--- a/app/views/pricing/_plan.html.erb
+++ b/app/views/pricing/_plan.html.erb
@@ -4,7 +4,7 @@
 
   <% if signed_in? %>
     <% if @plan && @plan.name_id.eql?( plan_id ) %>
-      <p class="badge badge-info pull-right" style="font-size: 24px; middle; padding: 10px;">Current</p>
+      <p class="badge badge-info <%= alignment %>" style="font-size: 16px; middle; padding: 10px;">Current</p>
     <% else %>
       <% btn_txt = 'Upgrade' %>
       <% btn_txt = 'Downgrade' if ( @plan && (@plan.price.to_i > plan.price.to_i) ) %>
@@ -15,12 +15,12 @@
       <form action="/settings/update_plan" method="POST" >
         <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
         <input type="hidden" name="plan" value="<%=plan_id%>" />
-        <button id="<%=plan.name_id%>_button" type="submit" class="btn btn-<%= btn_size %> btn-<%= btn_class %> pull-right" ><%= btn_txt %></button>
+        <button id="<%=plan.name_id%>_button" type="submit" class="btn btn-<%= btn_size %> btn-<%= btn_class %> <%= alignment %>" ><%= btn_txt %></button>
       </form>
     <% end %>
   <% else %>
     <form action="/signup" >
-      <button class="btn btn-big btn-success pull-right">Sign up for free</button>
+      <button class="btn btn-big btn-success <%= alignment %>">Sign up for free</button>
     </form>
   <% end %>
 
