--- a/app/assets/stylesheets/pricing.scss
+++ b/app/assets/stylesheets/pricing.scss
@@ -57,3 +57,15 @@
   font-size: 16px;
   font-weight: bold;
 }
+
+cite {
+    font-style: italic;
+    font-family: times;
+    font-size: 26px;
+    color: gray;
+    line-height: 1.2;
+}
+
+.cite_section {
+  padding-top: 10px;
+}
