Little fixes for pricing page.

--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -4,7 +4,7 @@
   <p style="padding-top: 30px; margin-bottom: 5px; font-size: 18px;">
     VersionEye allows you to monitor your open source projects for free!
     We only charge a small fee for monitoring project files in private GitHub/Bitbucket repositories.
-    VersionEye has a variety of plans to suit everyone`s needs. <br/>
+    VersionEye has a variety of plans to suit everyone's needs. <br/>
     <br/>
     <b>All of our SaaS plans can be cancelled or changed on a monthly base.</b>
   </p>
@@ -85,58 +85,3 @@
   </div>
 </div>
 
-
-<div class="col2-left col2-right" style="margin-top: 100px; display: none;">
-<table class="table table-striped" style="font-size: 18px;">
-  <thead>
-    <tr>
-      <th>Plan</th>
-      <th>Price</th>
-      <th>Private Repositories</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tr>
-    <td>Free</td>
-    <td>€ 0/Month</td>
-    <td>1</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_free', :alignment => 'pull-right' } %></td>
-  </tr>
-  <tr>
-    <td>Micro</td>
-    <td>€ 7/Month</td>
-    <td>5</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_micro', :alignment => 'pull-right' } %></td>
-  </tr>
-  <tr>
-    <td>Small</td>
-    <td>€ 12/Month</td>
-    <td>10</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_small', :alignment => 'pull-right' } %></td>
-  </tr>
-  <tr>
-    <td>Medium</td>
-    <td>€ 22/Month</td>
-    <td>20</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_medium', :alignment => 'pull-right' } %></td>
-  </tr>
-  <tr>
-    <td>Large</td>
-    <td>€ 50/Month</td>
-    <td>50</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_large', :alignment => 'pull-right' } %></td>
-  </tr>
-  <tr>
-    <td>X-Large</td>
-    <td>€ 100/Month</td>
-    <td>100</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_xlarge', :alignment => 'pull-right' } %></td>
-  </tr>
-  <tr>
-    <td>XX-Large</td>
-    <td>€ 250/Month</td>
-    <td>250</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_xxlarge', :alignment => 'pull-right' } %></td>
-  </tr>
-</table>
-</div>
