Optimise the landing page for sign ups
Call to action to the end of the page.

--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -4,7 +4,7 @@
         <h2>Package Managers</h2>
 
         <p class="lead">
-            VersionEye is based on package managers. The idea behind VersionEye is that it can monitor your package managers project file(s) on GitHub/Bitbucket. That way VersionEye knows which open source dependencies you are using and based on that it can send you notifications to new versions, license violations and security vulnerabilities. 
+            VersionEye is based on package managers. The idea behind VersionEye is that it can monitor your package managers project file(s) on GitHub/Bitbucket. That way VersionEye knows which open source dependencies you are using and based on that it can send you notifications to new versions, license violations and security vulnerabilities.
         </p>
         <p class="lead">
             Currently these package managers are supported:
@@ -18,8 +18,8 @@
             <li><a href="http://leiningen.org/">Leiningen</a> (Clojure)</li>
             <li><a href="http://cocoapods.org/">CocoaPods</a> (Objective-C)</li>
             <li><a href="http://maven.apache.org/">Maven</a> (Java). Try the <a href="https://github.com/versioneye/versioneye_maven_plugin">plugin</a>.</li>
-            <li><a href="http://www.scala-sbt.org/">SBT</a> (Scala)</li>
-            <li><a href="http://www.gradleware.com/">Gradle</a> (Groovy)</li>
+            <li><a href="http://www.scala-sbt.org/">SBT</a> (Scala). Try the <a href="https://github.com/versioneye/versioneye_sbt_plugin">plugin</a>.</li>
+            <li><a href="http://www.gradleware.com/">Gradle</a> (Groovy). Try the <a href="https://github.com/stempler/gradle-versioneye-plugin">plugin</a>.</li>
             <li><a href="https://www.biicode.com/">Biicode</a> (C/C++)</li>
         </ul>
 
