--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -116,16 +116,13 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="section-heading">VersionEye Enterprise</h2>
+                <div class="col-lg-12" style="text-align: center;">
 
-                    <p class="lead" >
-                        We're also offering an on-premises version of VersionEye. More information is available at our <%= link_to 'VersionEye Enterprise', enterprise_path %> page!
-                    </p>
-
-                    <p class="lead" >
-                        For any question send us a message to <span style="font-weight: bold;">contact [at] versioneye [dot] com</span> or contact us on <a href="https://twitter.com/VersionEye">Twitter</a>.
-                    </p>
+                    <%= form_tag(signup_path, :method => "GET", :style=>"margin: 0; padding: 0 0 0 10px;") do  %>
+                      <div class="form-group">
+                        <button type="submit" class="btn btn-lg btn-success" >Sign up for free</button>
+                      </div>
+                    <% end %>
 
                 </div>
             </div>
