Add line break to footer.

--- a/app/views/layouts/_footer_enterprise_content.html.erb
+++ b/app/views/layouts/_footer_enterprise_content.html.erb
@@ -10,7 +10,7 @@
   <div class="container row footer_link_row_3" >
     <%= link_to "Imprint", imprint_path %> |
     <%= link_to "Enterprise Agreements", enterprise_agreements_path %> |
-    <%= link_to "Disclaimer", disclaimer_path %>
+    <%= link_to "Disclaimer", disclaimer_path %> <br/><br/>
   </div>
 
 </footer>
