--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -43,7 +43,7 @@
     <a href="/objective-c" >Objective-C</a> |
     <a href="/clojure" >Clojure</a> |
     <a href="/r" >R</a> |
-    <a href="/biicode" >biicode</a>
+    <a href="/biicode" >biicode</a><br/><br/>
   </div>
 
 </footer>
