Add collaborators to the pricing.

--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -16,6 +16,7 @@
     <ul class="pricing_ul">
       <li class="pricing_head">Beginner</li>
       <li class="pricing_price">€ 7 <span class="pricing_price_sm">/ Month</span></li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 5</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Project Updates via API per day: </span> 5</li>
@@ -26,6 +27,7 @@
     <ul class="pricing_ul">
       <li class="pricing_head pricing_recommend">Freelancer</li>
       <li class="pricing_price pricing_recommend">€ 22 <span class="pricing_price_sm">/ Month</span></li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 20</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Project Updates via API per day: </span> 40</li>
@@ -38,6 +40,7 @@
     <ul class="pricing_ul">
       <li class="pricing_head">Professional</li>
       <li class="pricing_price">€ 100 <span class="pricing_price_sm">/ Month</span></li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature">Private Projects: 100</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Project Updates via API per day: </span> 200</li>
@@ -69,6 +72,7 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Crawling private repositories (Maven / CocoaPods / Satis / NPM and more) : </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
       <li class="pricing_feature"><span class="pricing_light_txt">CI integration (Jenkins / Bamboo and more): </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Sofware updates are provided as new Docker images: </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Unlimited Users / Collaborators:</span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
       <li class="pricing_feature"><span class="pricing_light_txt"><a style="font-size: 20px;" href="mailto:support@versioneye.com">contact us</a></li>
     </ul>
   </div>
