--- a/app/views/shared/_user_created.html.erb
+++ b/app/views/shared/_user_created.html.erb
@@ -9,7 +9,7 @@
 <p>
 	We've always got more updates and new features coming, so keep
 	your eye on the VersionEye Blog: <a href="http://blog.versioneye.com/">http://blog.versioneye.com/</a>
-	or follow <a href="https://twitter.com/VersionEye">@VersionEye</a> on Twitter for the latest.<br/>
+	and follow <a href="https://twitter.com/VersionEye">@VersionEye</a> on Twitter for the latest.<br/>
 	<br/>
 	<span>
 		<%= render "shared/follow_versioneye" %>
