Send selected plan to the signup form.

--- a/app/views/pricing/_plan.html.erb
+++ b/app/views/pricing/_plan.html.erb
@@ -20,7 +20,8 @@
     <% end %>
   <% else %>
     <form action="/signup" >
-      <button class="btn btn-big btn-success <%= alignment %>">Sign up for free</button>
+      <input type="hidden" name="plan" value="<%=plan_id%>" />
+      <button class="btn btn-big btn-success <%= alignment %>">Sign up for free!</button>
     </form>
   <% end %>
 
