--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -19,7 +19,7 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 5</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates via API per day: </span> 5</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates per day via API: </span> 5</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_micro', :alignment => ''  } %></li>
     </ul>
   </div>
@@ -30,7 +30,7 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 20</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates via API per day: </span> 40</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates per day via API: </span> 40</li>
       <li class="pricing_feature">PDF Export</li>
       <li class="pricing_feature">CSV Export</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_medium', :alignment => '' } %></li>
@@ -43,7 +43,7 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature">Private Projects: 100</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates via API per day: </span> 200</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates per day via API: </span> 200</li>
       <li class="pricing_feature">PDF Export</li>
       <li class="pricing_feature">CSV Export</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_xlarge', :alignment => '' } %></li>
