Improve spelling for FAQ.

--- a/app/views/page/faq.html.erb
+++ b/app/views/page/faq.html.erb
@@ -13,7 +13,7 @@
   <div class="content" >
     <h2>Why do I need that?</h2>
     <p class="l_faq_section">
-      Why are you using a continuous integration system to run your tests? You could start your tests from the command line! Right? The reason why you are using a CI system is automation! And for the same reason you should use a continuous ypdating tool like VersionEye. VersionEye will never forget to check your project. It will do the job everyday, notify you and it will never get sick or go on vacation. VersionEye is working 24/7 only for you! It keeps you informed and makes you a better developer!
+      Why are you using a continuous integration system to run your tests? You could start your tests from the command line! Right? The reason why you are using a CI system is automation! And for the same reason you should use a continuous updating tool like VersionEye. VersionEye will never forget to check your project. It will do the job everyday, notify you and it will never get sick or go on vacation. VersionEye is working 24/7 only for you! It keeps you informed and makes you a better developer!
     </p>
 
     <h2>How can I use VersionEye if my project is not on GitHub/Bitbucket</h2>
@@ -28,10 +28,10 @@
         <b>URL:</b> You can create a VersionEye project from a URL to a project file. VersionEye will fetch your project file every day from the URL and notify you about out-dated dependencies and license violations.
       </li>
       <li style="margin-bottom: 12px;">
-        <b>API:</b> You can use the <a href="https://www.versioneye.com/api/">VersionEye API</a> to create/update a project. There are already many open source tools build on top of the VersionEye API. For example the <a href="https://github.com/versioneye/versioneye_maven_plugin">VersionEye Maven Plugin</a>. 
+        <b>API:</b> You can use the <a href="https://www.versioneye.com/api/">VersionEye API</a> to create/update a project. There are already many open source tools build on top of the VersionEye API. For example the <a href="https://github.com/versioneye/versioneye_maven_plugin">VersionEye Maven Plugin</a>.
       </li>
       <li style="margin-bottom: 12px;">
-        <b>VersionEye Enterprise:</b> Everything you see here you can have as an on-premise solution. You can host <a href="https://www.versioneye.com/enterprise">VersionEye Enterprise</a> on your own hardware in your own datacenter. That way you are in full control of the privacy. 
+        <b>VersionEye Enterprise:</b> Everything you see here you can have as an on-premise solution. You can host <a href="https://www.versioneye.com/enterprise">VersionEye Enterprise</a> on your own hardware in your own datacenter. That way you are in full control of the privacy.
       </li>
     </ul>
     <p>
@@ -48,7 +48,7 @@
 
     <h2>I can not see my GitHub Organisations?</h2>
     <p class="l_faq_section">
-      Through the GitHub API we can only access organisatins where your membership is public. If somebody invites you to an organisation your membership in that organisation is NOT public, by default. Thtat means it will not show up at VersionEye. You have to make your membership in the organisation public to see the repositories of that organisation in VersionEye. 
+      Through the GitHub API we can only access organisatins where your membership is public. If somebody invites you to an organisation your membership in that organisation is NOT public, by default. Thtat means it will not show up at VersionEye. You have to make your membership in the organisation public to see the repositories of that organisation in VersionEye.
     </p>
     <p style="text-align: center">
       <%= image_tag "faq/github_orga.png", :style=>"width: 400px;" %>
@@ -58,15 +58,15 @@
     <p class="l_faq_section">
       Yes! We are based in Germany and you probably already know that the Germans are going crazy for privacy! VersionEye is always respecting your privacy! We are not interested in your code! We don't change it and we don't read it. We are only looking in your project root for a project file we can parse. That's all.<br/>
       Besides, we do this only for the repositories you have choosen. We will never scan ALL your repositories automatically, like some of our competitors. We only scan the repositories and branches you have selected.<br/>
-      If you're still suspicious, simply use the file upload, URL feature or the <a href="https://www.versioneye.com/api/">VersionEye API</a> to submit your project files. With those 3 features we don't get any access to your source code. Beside that we have <a href="https://www.versioneye.com/enterprise">VersionEye Enterprise</a>, which you can host on your own hardware. 
+      If you're still suspicious, simply use the file upload, URL feature or the <a href="https://www.versioneye.com/api/">VersionEye API</a> to submit your project files. With those 3 features we don't get any access to your source code. Beside that we have <a href="https://www.versioneye.com/enterprise">VersionEye Enterprise</a>, which you can host on your own hardware.
     </p>
 
     <h2>How quick do notifications happen?</h2>
     <p class="l_faq_section">
-      There are 2 kinds of notifications at VersionEye. The <b>follow</b> notifications and the <b>project</b> notifications. 
+      There are 2 kinds of notifications at VersionEye. The <b>follow</b> notifications and the <b>project</b> notifications.
     </p>
     <p class="l_faq_section">
-      The <b>follow</b> notifications you receive once a day. Assume you are following 100 software packages at VersionEye and 20 of them 
+      The <b>follow</b> notifications you receive once a day. Assume you are following 100 software packages at VersionEye and 20 of them
       release a new version today. In that case we will not send you 20 emails ;-) You will receive just 1 single email which contains the notifications for today! If there are no <b>follow</b> notifications for you, we don't send out an email!
     </p>
     <p class="l_faq_section">
@@ -78,10 +78,10 @@
 
     <h2>What happens with migrated / moved packages?</h2>
     <p class="l_faq_section">
-      Sometimes a software library is changing his namespace. That is specially a common case in the Java community. For example <a href="https://www.versioneye.com/java/pdfbox:pdfbox/0.7.3">pdfbox:pdfbox:0.7.3</a> moved to <a href="https://www.versioneye.com/java/org.apache.pdfbox:pdfbox/1.8.9">org.apache.pdfbox:pdfbox:1.8.9</a>. Indeed it's the same project. Currently VersionEye is not handling this problem. Might be that in future we make a connection between those migrated libraries, but right now not. 
+      Sometimes a software library is changing his namespace. That is specially a common case in the Java community. For example <a href="https://www.versioneye.com/java/pdfbox:pdfbox/0.7.3">pdfbox:pdfbox:0.7.3</a> moved to <a href="https://www.versioneye.com/java/org.apache.pdfbox:pdfbox/1.8.9">org.apache.pdfbox:pdfbox:1.8.9</a>. Indeed it's the same project. Currently VersionEye is not handling this problem. Might be that in future we make a connection between those migrated libraries, but right now not.
     </p>
-    
-  
+
+
   </div>
 
 </div>
