--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -23,7 +23,7 @@
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_micro', :alignment => ''  } %></li>
     </ul>
   </div>
-  <div class="col-md-4" style="margin-top: -10px;" >
+  <div class="col-md-4" style="margin-top: -10px;" id="freelancer_pricing" >
     <ul class="pricing_ul">
       <li class="pricing_head pricing_recommend">Freelancer</li>
       <li class="pricing_price pricing_recommend">€ 22 <span class="pricing_price_sm">/ Month</span></li>
