--- a/app/views/users/_signup_form.html.erb
+++ b/app/views/users/_signup_form.html.erb
@@ -64,7 +64,7 @@
     <div class="form-group">
       <div class="control-label"></div>
       <div class="controls">
-        <button type="submit" class="btn btn-large btn-primary" ><%= t(:page_signup_button_signup) %></button>
+        <button type="submit" id="signup_form_btn" class="btn btn-large btn-primary" ><%= t(:page_signup_button_signup) %></button>
       </div>
     </div>
 
