Display when the uploaded file was updated the last time.
If project has version number set then display that as well.

--- a/app/views/user/projects/helpers/_project_source.html.erb
+++ b/app/views/user/projects/helpers/_project_source.html.erb
@@ -27,5 +27,8 @@
       This is a project from
       <a href="<%= project.url%>" target="_URL">URL</a>.
     <% else %>
-      This is a project from file upload.
+      This is a project from file upload. Last updated at <span>"<%= project.updated_at.strftime("%b %d, %Y - %H:%M") %>"</span>.
+      <% if !project.version.to_s.empty? %>
+        (Version: <%= project.version %>)
+      <% end %>
     <% end %>
