Rework the signup ad on the left of side of the projects.

--- a/app/views/language/most_referenced.html.erb
+++ b/app/views/language/most_referenced.html.erb
@@ -4,7 +4,7 @@
 <div class="col-md-3">
 
   <% if !signed_in? %>
-    <%= render "/shared/github_ad" %>
+    <%= render "/shared/signup_ad" %>
   <% end %>
 
 </div>
