--- a/app/views/products/project_usage.html.erb
+++ b/app/views/products/project_usage.html.erb
@@ -4,27 +4,27 @@
 <div class="col-md-3">
 
   <% if !signed_in? && !Rails.env.enterprise? %>
-    <%= render '/shared/github_ad' %>
+    <%= render '/shared/signup_ad' %>
   <% end %>
 
 </div>
 
 <% if @product %>
-  
+
   <div class="col-md-9" >
     <div class="content_header_def" >
       <%= link_to @product.name, product_version_path(@product) %> is used in <%= pluralize(@product.project_usage , "project")  %>
     </div>
     <div class="content">
-      
+
       <% @project_ids.each do |project_id| %>
         <%  project = ProjectService.find project_id %>
-        <%  next if project.nil? %> 
-        <%  next if project.user.nil? %> 
+        <%  next if project.nil? %>
+        <%  next if project.user.nil? %>
         <% dep = fetch_projectdependency(@product, project_id) %>
-        <%  color = '' %> 
+        <%  color = '' %>
         <% if !dep.version_requested.eql?(@product.version) %>
-          <%  color = 'flash warning' %>   
+          <%  color = 'flash warning' %>
         <% end %>
         <div class="row search-item <%= color %>">
           <div class="icon56 span2 pull-left">
@@ -32,7 +32,7 @@
             <span class = "icon_<%= prog_lang %> on" ></span>
           </div>
           <div class = "span6">
-            <%= link_to project.name, user_project_path(project) %> by <%= link_to project.user.fullname, user_path(project.user) %><br/> 
+            <%= link_to project.name, user_project_path(project) %> by <%= link_to project.user.fullname, user_path(project.user) %><br/>
             Using <%= link_to @product.name, product_version_path(@product) %> <%= dep.version_requested %>. Current is <%= @product.version %>
           </div>
         </div>
