--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -7,7 +7,7 @@
 
   <% if !signed_in? %>
     <div class="gh_add" >
-      <%= render "/shared/github_ad" %>
+      <%= render "/shared/signup_ad" %>
     </div>
   <% end %>
 
