--- a/app/views/user/helpers/_navi.html.erb
+++ b/app/views/user/helpers/_navi.html.erb
@@ -34,7 +34,7 @@
         <li><%= link_to 'Create From Upload', user_prjects_upload_path, :rel => "nofollow" %></li>
       </ul>
       <% else %>
-        <%= render '/shared/github_ad' %>
+        <%= render '/shared/signup_ad' %>
       <% end %>
     </div>
 
