Improve the wording for the Enterprise Plan.

--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -63,8 +63,8 @@
       <li class="pricing_head">Enterprise</li>
       <li class="pricing_feature"><span class="pricing_light_txt">100% privacy:</span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Self hosted behind your firewall:</span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
-      <li class="pricing_feature"><span class="pricing_light_txt">LDAP / AD integration: </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Private SMTP / Exchange server: </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
+      <li class="pricing_feature"><span class="pricing_light_txt">LDAP &amp; Active Directory integration: </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Private email server (SMTP | Microsoft Exchange): </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
       <li class="pricing_feature"><span class="pricing_light_txt">GitHub Enterprise integration: </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Atlassian Stash integration: </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Atlassian Bitbucket integration: </span> <i class="fa fa-check" style="color: #2ecc71;"></i></li>
